objects/HPFS_Funding_Status__c.object
<CustomObject>
    <fields>
        <fullName>Document_Id__c</fullName>
        <label>Document Id</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Document_Name__c</fullName>
        <label>CD Document</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dollar_Funded_Amount__c</fullName>
        <label>Dollar Funded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Dollar_Unfunded_Amount__c</fullName>
        <label>Dollar Unfunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Date__c</fullName>
        <label>Funding Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Funding_Status__c</fullName>
        <label>Funding Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPFS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>HPFS External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Funding_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <label>HPFS Funding Status</label>
    <nameField>
        <displayFormat>HPFS-{0000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HPFS Funding Status</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>